# oslo.vmware

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bandit.yaml  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements-py3.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  usage.rst
oslo.vmware/locale/: oslo.vmware-log-critical.pot  oslo.vmware-log-error.pot  oslo.vmware-log-info.pot  oslo.vmware-log-warning.pot  oslo.vmware.pot
oslo/vmware/: api.py  constants.py  exceptions.py  image_transfer.py  pbm.py  rw_handles.py  service.py  vim.py  vim_util.py
oslo_vmware/: _i18n.py  api.py  constants.py  dvs_util.py  exceptions.py  image_transfer.py  image_util.py  pbm.py  rw_handles.py  service.py  version.py  vim.py  vim_util.py
oslo_vmware/common/: loopingcall.py
oslo_vmware/hacking/: checks.py
oslo_vmware/locale/: oslo_vmware-log-error.pot  oslo_vmware-log-info.pot  oslo_vmware-log-warning.pot  oslo_vmware.pot
oslo_vmware/objects/: datacenter.py  datastore.py
oslo_vmware/tests/: test.ovf  test_api.py  test_dvs_util.py  test_exceptions.py  test_hacking.py  test_image_transfer.py  test_image_util.py  test_pbm.py  test_rw_handles.py  test_service.py  test_vim.py  test_vim_util.py
releasenotes/notes/: vmdk-transfer-validation-014d28cc9430e51b.yaml  (+2 more)
tests/: test_api.py  test_image_transfer.py  test_pbm.py  test_rw_handles.py  test_service.py  test_vim.py  test_vim_util.py  test_vmware.py
(+67 files in other folders)
